--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>welcome to css ninja training</h1>
+        <h1>welcome to css ninja training borojo</h1>
         <p>become a master of css styles and effects</p>   
     </header>
 
